--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   sqflite_common_ffi: ^2.3.0
+  sqflite: ^2.3.0
   path_provider: ^2.1.2
   http: ^1.2.0
   intl: ^0.19.0
